# fp-p3

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
backend/: .basketball_profile  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
backend/data/: generate_data.py
backend/data/embeddings/: embedding_sources.csv
backend/data/init_clusters/: 1610612748.pkl  1610612752.pkl  1610612755.pkl
backend/data/nba_tracking_data/: games.jsonl  teams.jsonl
backend/data/nba_tracking_data/plays/: 0021500009.parquet  0021500018.parquet  0021500019.parquet  0021500023.parquet  0021500033.parquet  0021500041.parquet  0021500042.parquet  0021500048.parquet  0021500055.parquet  0021500060.parquet  0021500079.parquet  0021500080.parquet  0021500087.parquet  0021500095.parquet  0021500096.parquet  0021500099.parquet  0021500108.parquet  0021500115.parquet  0021500124.parquet  0021500127.parquet  0021500130.parquet  0021500131.parquet  0021500145.parquet  0021500152.parquet  0021500161.parquet  0021500162.parquet  0021500167.parquet  0021500175.parquet  0021500190.parquet  0021500193.parquet  0021500204.parquet  0021500219.parquet  0021500230.parquet  0021500231.parquet  0021500250.parquet  0021500252.parquet  0021500255.parquet  0021500263.parquet  0021500271.parquet  0021500277.parquet  (+58 more)
backend/model/: dataset.py  model.py  preprocess.py
backend/scripts/: load_data.ipynb  load_data.py  load_nba_tracking_data_15_16.py  prepare_data.py  prerender_videos.py  train_model.sh  train_model_v2.sh
backend/src/backend/: settings.py
backend/src/backend/model/: Possesion.py  README.md  dataset.py  dataset_v2.py  decoder.py  encoder.py  get_embeddings.py  model.py  model_utils.py  model_v2.py  possession.py  preprocess.py  preprocess_v2.py  train.py  train_v2.py  utils.py  visu_embeddings_experiment.py
backend/src/backend/resources/: Cluster.py  FeedbackItem.py  Game.py  Play.py  PlayClustering.py  PlayId.py  __init__.py  cluster.py  clustering.py  dataset_manager.py  feedback_item.py  game.py  nba_data.py  play.py  play_clustering.py  playid.py  scatter_data.py
backend/src/backend/router/: app.py  routes.py
backend/src/backend/video/: Ball.py  Constant.py  Event.py  Game.py  Moment.py  Player.py  Team.py  constant.py  event.py  get_gif.ipynb  main.py  moment.py  player.py
backend/src/server/: settings.py
backend/src/server/resources/: __init__.py  dataset_manager.py  nba_data.py  scatter_data.py
backend/src/server/router/: app.py  routes.py
frontend/: .prettierignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: app.css  root.js  root.tsx  routes.ts
frontend/app/components/: ClusterView.tsx  DataChoice.tsx  EmptyScatterGuide.tsx  Filters.tsx  GamesTable.tsx  Header.tsx  LoaderSkeletons.tsx  PlayView.tsx  PlaysTable.tsx  ScatterPlot.js  ScatterPlot.tsx  TeamsTable.tsx  utils.js  utils.ts
frontend/app/components/dummy/: DataChoice.tsx  ScatterPlot.tsx
frontend/app/components/ui/: alert.tsx  badge.tsx  button.js  button.tsx  card.js  card.tsx  checkbox.tsx  collapsible.js  command.js  command.tsx  dialog.js  dialog.tsx  dropdown-menu.tsx  form.js  form.tsx  label.js  navigation-menu.tsx  popover.js  popover.tsx  resizable.js  resizable.tsx  select.js  select.tsx  separator.tsx  sheet.tsx  slider.js  slider.tsx  table.js  table.tsx  tabs.tsx  tooltip.tsx
frontend/app/dummy/: Dummy.js  Dummy.tsx
frontend/app/lib/: const.ts  cookies.ts  fetchCache.ts  play-tag-api.ts  stateStore.ts  tag-store.ts  utils.ts
frontend/app/routes/: _index.tsx  dummy.tsx  example.dummy._index.tsx  example.mockup._index.tsx  home.js  home.tsx  mockup.tsx  play.tsx  resources.cluster.tsx  resources.play.tsx  tagged_plays.tsx
frontend/app/routes/resources/: play.tsx  update-play.tsx
frontend/app/types/: data.ts
helm/: values.yaml
