[project]
name = "backend"
version = "0.0.1"
description = "Backend for the dummy project of the XAI-IML 2025 course."
readme = "README.md"
authors = [
    {name = "Romeo Stoll", email = "stollr@student.ethz.ch"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta"
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "gunicorn>=21.2.0",
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "flask-cors>=5.0.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "datasets>=3.4.1",
    "py7zr>=0.22.0",
    "tqdm>=4.67.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "polars>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "BLE", "C90", "A"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
